--- a/oe_kemoxon_delivery_custom/report/pro-forma_invoice_template.xml
+++ b/oe_kemoxon_delivery_custom/report/pro-forma_invoice_template.xml
@@ -76,8 +76,10 @@
                 <br/>
                 <t t-set="lines_to_report" t-value="doc._get_order_lines_to_report()"/>
                 <style>
-                    .my_data_table th {border-right: 1px solid white;border-left: 1px solid white;padding-top: 5px;padding-bottom: 5px;}
-                    .my_data_table td {border-right: 1px solid white;border-left: 1px solid white;padding-top: 5px;padding-bottom: 5px;}
+                    .my_data_table th {border-right: 1px solid white;border-left: 1px solid white;padding-top:
+                    5px;padding-bottom: 5px;}
+                    .my_data_table td {border-right: 1px solid white;border-left: 1px solid white;padding-top:
+                    5px;padding-bottom: 5px;}
                 </style>
                 <table width="100%" class="my_data_table">
                     <!-- In case we want to repeat the header, remove "display: table-row-group" -->
@@ -176,7 +178,7 @@
                 <strong>Delivery Information</strong>
                 <div style="border: 1px solid black;"/>
                 <br/>
-                <div class="row">
+                <div class="row" t-if="doc.picking_ids.delivery_from or doc.picking_ids.delivery_to">
                     <div class="col-2">
                         <strong>Delivery Period</strong>
                     </div>
@@ -185,23 +187,21 @@
                             <span class="m-0" t-field="doc.picking_ids.delivery_from"/>
                             -
                             <span class="m-0" t-field="doc.picking_ids.delivery_to"/>
-
                         </t>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-2">
+                    <div class="col-2" t-if="doc.picking_ids.delivery_location">
                         <strong>Delivery Location</strong>
                     </div>
                     <br/>
                     <div class="col-4" style="padding-left: 37px;">
                         <t t-if="doc.picking_ids">
                             <span class="m-0" t-field="doc.picking_ids.delivery_location"/>
-
                         </t>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row" t-if="doc.incoterm">
                     <div class="col-2">
                         <strong>Incoterms</strong>
                     </div>
@@ -244,86 +244,88 @@
                             </div>
                         </div>
                         <!-- Left div ended Here -->
-                        
+
                         <!-- Right Div started from here -->
                         <div class="col-6">
                             <div class="col-12 row" t-if="doc.partner_id.company_bank_account_id.bank_id.name">
                                 <div class="col-5" style="padding-left: 4px;">
                                     <strong>Bank</strong>
                                 </div>
-                                <div class="col-7"  style="padding-left: 0px;" >
+                                <div class="col-7" style="padding-left: 0px;">
                                     <t t-if="doc.partner_id.company_bank_account_id">
                                         <span style="text-align:left;" class="m-0"
                                               t-field="doc.partner_id.company_bank_account_id.bank_id.name"/>
                                     </t>
                                 </div>
                             </div>
-                            
-                            
+
+
                             <div class="col-12 row" t-if="doc.partner_id.company_bank_account_id.acc_holder_name">
                                 <div class="col-5" style="padding-left: 4px;">
                                     <strong>In favour of</strong>
                                 </div>
-                                <div class="col-7"  style="padding-left: 0px;" >
+                                <div class="col-7" style="padding-left: 0px;">
                                     <t t-if="doc.partner_id.company_bank_account_id">
                                         <span style="text-align:left;" class="m-0"
                                               t-field="doc.partner_id.company_bank_account_id.acc_holder_name"/>
                                     </t>
                                 </div>
                             </div>
-                            
-                            
-                            
-                         <div class="col-12 row" t-if="doc.partner_id.company_bank_account_id.acc_number">
-                            <div class="col-5"  style="padding-left: 4px;">
-                                <strong>A/C No</strong>
+
+
+                            <div class="col-12 row" t-if="doc.partner_id.company_bank_account_id.acc_number">
+                                <div class="col-5" style="padding-left: 4px;">
+                                    <strong>A/C No</strong>
+                                </div>
+                                <div class="col-7" style="padding-left: 0px;">
+                                    <t t-if="doc.partner_id.company_bank_account_id">
+                                        <span style="text-align:left;" class="m-0"
+                                              t-field="doc.partner_id.company_bank_account_id.acc_number"/>
+                                    </t>
+                                </div>
                             </div>
-                            <div class="col-7" style="padding-left: 0px;">
-                                <t t-if="doc.partner_id.company_bank_account_id">
-                                    <span style="text-align:left;" class="m-0"
-                                          t-field="doc.partner_id.company_bank_account_id.acc_number"/>
-                                </t>
+
+
+                            <div class="col-12 row" t-if="doc.partner_id.company_bank_account_id.bank_id.bic">
+                                <div class="col-5" style="padding-left: 4px;">
+                                    <strong>Swift Code</strong>
+                                </div>
+                                <div class="col-7" style="padding-left: 0px;">
+                                    <t t-if="doc.partner_id.company_bank_account_id">
+                                        <span class="m-0" t-field="doc.partner_id.company_bank_account_id.bank_id.bic"/>
+                                    </t>
+                                </div>
                             </div>
-                        </div>
-                            
-                            
-                        <div class="col-12 row" t-if="doc.partner_id.company_bank_account_id.bank_id.bic">
-                            <div class="col-5" style="padding-left: 4px;">
-                                <strong>Swift Code</strong>
-                            </div>
-                            <div class="col-7" style="padding-left: 0px;">
-                                <t t-if="doc.partner_id.company_bank_account_id">
-                                    <span class="m-0" t-field="doc.partner_id.company_bank_account_id.bank_id.bic"/>
-                                </t>
-                            </div>
-                        </div>
-                            
-                        
-                        <div class="col-12 row" t-if="doc.partner_id.company_bank_account_id.inter_mediatory_bank_id">
-                            <div class="col-5" style="padding-left: 4px;">
+
+
+                            <div class="col-12 row"
+                                 t-if="doc.partner_id.company_bank_account_id.inter_mediatory_bank_id">
+                                <div class="col-5" style="padding-left: 4px;">
                                     <strong>Intermediary Bank</strong>
                                 </div>
                                 <div class="col-7" style="padding-left: 0px;">
                                     <t t-if="doc.partner_id.company_bank_account_id">
-                                <span class="m-0" t-field="doc.partner_id.company_bank_account_id.inter_mediatory_bank_id.name"/>
-                                </t>
+                                        <span class="m-0"
+                                              t-field="doc.partner_id.company_bank_account_id.inter_mediatory_bank_id.name"/>
+                                    </t>
+                                </div>
                             </div>
-                        </div>
-                            
-                        <div class="col-12 row" t-if="doc.partner_id.company_bank_account_id.inter_mediatory_swift">
-                            <div class="col-5" style="padding-left: 4px;">
+
+                            <div class="col-12 row" t-if="doc.partner_id.company_bank_account_id.inter_mediatory_swift">
+                                <div class="col-5" style="padding-left: 4px;">
                                     <strong>Intermediary Swift</strong>
                                 </div>
                                 <div class="col-7" style="padding-left: 0px;">
                                     <t t-if="doc.partner_id.company_bank_account_id">
-                            <span class="m-0" t-field="doc.partner_id.company_bank_account_id.inter_mediatory_swift"/>
-                        </t>
+                                        <span class="m-0"
+                                              t-field="doc.partner_id.company_bank_account_id.inter_mediatory_swift"/>
+                                    </t>
+                                </div>
                             </div>
                         </div>
-                        </div>
                         <!-- Right Div Ended Here -->
-                    </div>               
-                </div>  
+                    </div>
+                </div>
                 <br/>
                 <br/>
                 <br/>
@@ -333,7 +335,7 @@
                 <br/>
                 <br/>
                 <strong>Terms And Conditions</strong>
-                <div  style="border-top: 2px solid black;"/>
+                <div style="border-top: 2px solid black;"/>
                 <br/>
                 <!--                <span class="m-0" t-field="o.narration"/>-->
                 <ul>
