--- a/oe_kemoxon_delivery_custom/report/invoice_report_template.xml
+++ b/oe_kemoxon_delivery_custom/report/invoice_report_template.xml
@@ -278,6 +278,14 @@
                                 <span class="m-0" t-field="o.currency_id.name"/>
                             </div>
                         </div>
+                        <div class="col-12 row">
+                            <div class="col-4">
+                                <strong t-if="o.invoice_payment_term_id">Payment Term</strong>
+                            </div>
+                            <div class="col-8">
+                                <span class="m-0" t-field="o.invoice_payment_term_id.name"/>
+                            </div>
+                        </div>
 
                     </div>
                     <!-- Left div ended Here -->
