--- a/oe_kemoxon_delivery_custom/report/pro-forma_invoice_template.xml
+++ b/oe_kemoxon_delivery_custom/report/pro-forma_invoice_template.xml
@@ -31,11 +31,10 @@
                     <div class="col-2"/>
                     <div class="col-6">
                         <div class="row">
-                            <div class="col-4 pl-1">
+                            <div class="col-5" style="padding-left: 10px;">
                                 <strong>Date :</strong>
                             </div>
-                            <div class="col-2"/>
-                            <div class="col-4">
+                            <div class="col-7" style="padding-left: 23px;">
                                 <span class="m-0" t-field="doc.date_order"
                                       t-options='{"widget": "date","format": "dd/MM/yyyy"}'/>
                             </div>
@@ -77,8 +76,10 @@
                 <br/>
                 <t t-set="lines_to_report" t-value="doc._get_order_lines_to_report()"/>
                 <style>
-                    .my_data_table th {border-right: 1px solid white;border-left: 1px solid white;padding-top: 5px;padding-bottom: 5px;}
-                    .my_data_table td {border-right: 1px solid white;border-left: 1px solid white;padding-top: 5px;padding-bottom: 5px;}
+                    .my_data_table th {border-right: 1px solid white;border-left: 1px solid white;padding-top:
+                    5px;padding-bottom: 5px;}
+                    .my_data_table td {border-right: 1px solid white;border-left: 1px solid white;padding-top:
+                    5px;padding-bottom: 5px;}
                 </style>
                 <table width="100%" class="my_data_table">
                     <!-- In case we want to repeat the header, remove "display: table-row-group" -->
@@ -177,32 +178,34 @@
                 <strong>Delivery Information</strong>
                 <div style="border: 1px solid black;"/>
                 <br/>
+                <t t-if="doc.picking_ids">
+                    <t t-foreach="doc.picking_ids[0]" t-as="picking">
+                        <div class="row" t-if="picking.delivery_from or picking.delivery_to">
+                            <div class="col-2">
+                                <strong>Delivery Period</strong>
+                            </div>
+                            <div class="col-4" style="padding-left: 37px;">
+                                <t t-if="doc.picking_ids">
+                                    <span class="m-0" t-field="picking.delivery_from"/>
+                                    -
+                                    <span class="m-0" t-field="picking.delivery_to"/>
+                                </t>
+                            </div>
+                        </div>
+                    </t>
+                </t>
                 <div class="row">
-                    <div class="col-2">
-                        <strong>Delivery Period</strong>
-                    </div>
-                    <div class="col-4" style="padding-left: 37px;">
-                        <t t-if="doc.picking_ids">
-                            <span class="m-0" t-field="doc.picking_ids.delivery_from"/>
-                            -
-                            <span class="m-0" t-field="doc.picking_ids.delivery_to"/>
-
-                        </t>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-2">
+                    <div class="col-2" t-if="doc.picking_ids.delivery_location">
                         <strong>Delivery Location</strong>
                     </div>
                     <br/>
                     <div class="col-4" style="padding-left: 37px;">
                         <t t-if="doc.picking_ids">
                             <span class="m-0" t-field="doc.picking_ids.delivery_location"/>
-
                         </t>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row" t-if="doc.incoterm">
                     <div class="col-2">
                         <strong>Incoterms</strong>
                     </div>
@@ -224,90 +227,108 @@
                 <br/>
                 <!--                <table width="100%">-->
                 <div class="row">
-                    <div class="col-1">
-                        <strong>Currency</strong>
-                    </div>
-                    <div class="col-1"/>
-                    <div class="col-2"  style="padding-left: 37px;">
-                            <span class="m-0" t-field="doc.pricelist_id.currency_id.name"/>
-                    </div>
-                    <div class="col-2"/>
-                    <div class="col-2">
-                        <strong>BANK</strong>
-                    </div>
-                    <div class="col-1"/>
-                    <div class="col-3">
-                        <t t-if="doc.partner_id.company_bank_account_id">
-                            <span style="text-align:left;" class="m-0" t-field="doc.partner_id.company_bank_account_id.bank_id"/>
-                        </t>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-2">
-                        <strong>Payment Terms</strong>
-                    </div>
-                    <div class="col-2" style="padding-left: 37px;">
-                        <span style="text-align:left;" class="m-0" t-field="doc.payment_term_id"/>
-                    </div>
-                    <div class="col-2"/>
-                    <div class="col-6">
-                        <div class="row">
-                            <div class="col-4">
-                                <strong>In favour of</strong>
+                    <div class="col-12 row">
+                        <!-- left div start from here -->
+                        <div class="col-6">
+                            <div class="col-12 row">
+                                <div class="col-4">
+                                    <strong>Currency</strong>
+                                </div>
+                                <div class="col-8" style="padding-left: 38px;">
+                                    <span class="m-0" t-field="doc.pricelist_id.currency_id.name"/>
+                                </div>
                             </div>
-                            <div class="col-2"/>
-                            <div class="col-6">
-                                <t t-if="doc.partner_id.company_bank_account_id">
-                                    <span style="text-align:left;" class="m-0"
-                                          t-field="doc.partner_id.company_bank_account_id.acc_holder_name"/>
-                                </t>
+                            <div class="col-12 row" t-if="doc.payment_term_id">
+                                <div class="col-4">
+                                    <strong>Payment Terms</strong>
+                                </div>
+                                <div class="col-8" style="padding-left: 38px;">
+                                    <span class="text-content" t-esc="doc.get_text_from_html_field(doc)"
+                                          t-options="{'widget': 'html'}"/>
+                                </div>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-4">
-                                <strong>A/C No</strong>
+                        <!-- Left div ended Here -->
+
+                        <!-- Right Div started from here -->
+                        <div class="col-6">
+                            <div class="col-12 row" t-if="doc.partner_id.company_bank_account_id.bank_id.name">
+                                <div class="col-5" style="padding-left: 4px;">
+                                    <strong>Bank</strong>
+                                </div>
+                                <div class="col-7" style="padding-left: 0px;">
+                                    <t t-if="doc.partner_id.company_bank_account_id">
+                                        <span style="text-align:left;" class="m-0"
+                                              t-field="doc.partner_id.company_bank_account_id.bank_id.name"/>
+                                    </t>
+                                </div>
                             </div>
-                            <div class="col-2"/>
-                            <div class="col-6">
-                                <t t-if="doc.partner_id.company_bank_account_id">
-                                    <span style="text-align:left;" class="m-0"
-                                          t-field="doc.partner_id.company_bank_account_id.acc_number"/>
-                                </t>
+
+
+                            <div class="col-12 row" t-if="doc.partner_id.company_bank_account_id.acc_holder_name">
+                                <div class="col-5" style="padding-left: 4px;">
+                                    <strong>In favour of</strong>
+                                </div>
+                                <div class="col-7" style="padding-left: 0px;">
+                                    <t t-if="doc.partner_id.company_bank_account_id">
+                                        <span style="text-align:left;" class="m-0"
+                                              t-field="doc.partner_id.company_bank_account_id.acc_holder_name"/>
+                                    </t>
+                                </div>
+                            </div>
+
+
+                            <div class="col-12 row" t-if="doc.partner_id.company_bank_account_id.acc_number">
+                                <div class="col-5" style="padding-left: 4px;">
+                                    <strong>A/C No</strong>
+                                </div>
+                                <div class="col-7" style="padding-left: 0px;">
+                                    <t t-if="doc.partner_id.company_bank_account_id">
+                                        <span style="text-align:left;" class="m-0"
+                                              t-field="doc.partner_id.company_bank_account_id.acc_number"/>
+                                    </t>
+                                </div>
+                            </div>
+
+
+                            <div class="col-12 row" t-if="doc.partner_id.company_bank_account_id.bank_id.bic">
+                                <div class="col-5" style="padding-left: 4px;">
+                                    <strong>Swift Code</strong>
+                                </div>
+                                <div class="col-7" style="padding-left: 0px;">
+                                    <t t-if="doc.partner_id.company_bank_account_id">
+                                        <span class="m-0" t-field="doc.partner_id.company_bank_account_id.bank_id.bic"/>
+                                    </t>
+                                </div>
+                            </div>
+
+
+                            <div class="col-12 row"
+                                 t-if="doc.partner_id.company_bank_account_id.inter_mediatory_bank_id">
+                                <div class="col-5" style="padding-left: 4px;">
+                                    <strong>Intermediary Bank</strong>
+                                </div>
+                                <div class="col-7" style="padding-left: 0px;">
+                                    <t t-if="doc.partner_id.company_bank_account_id">
+                                        <span class="m-0"
+                                              t-field="doc.partner_id.company_bank_account_id.inter_mediatory_bank_id.name"/>
+                                    </t>
+                                </div>
+                            </div>
+
+                            <div class="col-12 row" t-if="doc.partner_id.company_bank_account_id.inter_mediatory_swift">
+                                <div class="col-5" style="padding-left: 4px;">
+                                    <strong>Intermediary Swift</strong>
+                                </div>
+                                <div class="col-7" style="padding-left: 0px;">
+                                    <t t-if="doc.partner_id.company_bank_account_id">
+                                        <span class="m-0"
+                                              t-field="doc.partner_id.company_bank_account_id.inter_mediatory_swift"/>
+                                    </t>
+                                </div>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-4">
-                                <strong>Swift Code</strong>
-                            </div>
-                            <div class="col-2"/>
-                            <div class="col-6" style="text-align:left;">
-                                <t t-if="doc.partner_id.company_bank_account_id">
-                                    <span class="m-0" t-field="doc.partner_id.company_bank_account_id.bank_id.bic"/>
-                                </t>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-4">
-                                <strong>Intermediary Bank</strong>
-                            </div>
-                            <div class="col-2"/>
-                            <div class="col-6">
-                                <t t-if="doc.partner_id.company_bank_account_id">
-                                    <span class="m-0" t-field="doc.partner_id.company_bank_account_id.inter_mediatory_bank_id"/>
-                                </t>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-4">
-                                <strong>Intermediary Swift</strong>
-                            </div>
-                            <div class="col-2"/>
-                            <div class="col-6">
-                                <t t-if="doc.partner_id.company_bank_account_id">
-                                    <span class="m-0" t-field="doc.partner_id.company_bank_account_id.inter_mediatory_swift"/>
-                                </t>
-                            </div>
-                        </div>
+                        <!-- Right Div Ended Here -->
                     </div>
                 </div>
                 <br/>
@@ -319,7 +340,7 @@
                 <br/>
                 <br/>
                 <strong>Terms And Conditions</strong>
-                <div  style="border-top: 2px solid black;"/>
+                <div style="border-top: 2px solid black;"/>
                 <br/>
                 <!--                <span class="m-0" t-field="o.narration"/>-->
                 <ul>
