--- a/oe_kemoxon_delivery_custom/report/pro-forma_invoice_template.xml
+++ b/oe_kemoxon_delivery_custom/report/pro-forma_invoice_template.xml
@@ -15,9 +15,9 @@
                     <div class="col-4">
                         <div class="row">
                             <div class="col-5">
-                                <strong>PFI No</strong>
+                                <strong>PFI No :</strong>
                                 <br/>
-                                <p t-if="doc.deal_ref"><strong>Deal Ref</strong></p>
+                                <strong>Deal Ref :</strong>
                             </div>
                             <div class="col-2"/>
                             <br/>
@@ -32,7 +32,7 @@
                     <div class="col-6">
                         <div class="row">
                             <div class="col-5" style="padding-left: 10px;">
-                                <strong>Date</strong>
+                                <strong>Date :</strong>
                             </div>
                             <div class="col-7" style="padding-left: 23px;">
                                 <span class="m-0" t-field="doc.date_order"
@@ -80,13 +80,12 @@
                     5px;padding-bottom: 5px;}
                     .my_data_table td {border-right: 1px solid white;border-left: 1px solid white;padding-top:
                     5px;padding-bottom: 5px;}
-                      
                 </style>
                 <table width="100%" class="my_data_table">
                     <!-- In case we want to repeat the header, remove "display: table-row-group" -->
                     <tr style="border-bottom:2px solid #d4d6d9;border-top:2px solid #d4d6d9; border-top:2px solid #d4d6d9">
                         <th name="th_description" class="text-start">Description</th>
-                        <th name="th_quantity" class="text-end col col-md-3">Quantity</th>
+                        <th name="th_quantity" class="text-end">Quantity</th>
                         <th name="th_priceunit" class="text-end">Rate</th>
                         <th name="th_discount" t-if="display_discount" class="text-end"
                             groups="product.group_discount_per_so_line">
@@ -114,18 +113,8 @@
                                 <td name="td_name">
                                     <span t-field="line.name"/>
                                 </td>
-                                <td name="td_quantity" class="text-end  col col-md-3">
+                                <td name="td_quantity" class="text-end">
                                     <span t-field="line.product_uom_qty"/>
-                                    
-                                    <span t-if="line.tolerance_type=='min_max'">
-                                         <span><span>+/-</span><span t-field="line.tolerance_percentage"/><span>%</span></span>
-                                    </span>
-                                     <span t-elif="line.tolerance_type=='max'">
-                                         <span>Max</span>
-                                    </span>
-                                     <span t-elif="line.tolerance_type=='min'">
-                                         <span>Min</span>
-                                    </span>
                                     <span t-field="line.product_uom"/>
                                 </td>
                                 <td name="td_priceunit" class="text-end">
