--- a/oe_kemoxon_delivery_custom/report/invoice_report_template.xml
+++ b/oe_kemoxon_delivery_custom/report/invoice_report_template.xml
@@ -15,7 +15,7 @@
                             <div class="col-4">
                                 <strong>Invoice No.</strong>
                                 <br/>
-                                <p>
+                                <p t-if="o.deal_ref">
                                     <strong>Deal Ref</strong>
                                 </p>
                             </div>
