--- a/oe_kemoxon_delivery_custom/report/delivery_sale_invoice_template.xml
+++ b/oe_kemoxon_delivery_custom/report/delivery_sale_invoice_template.xml
@@ -178,7 +178,7 @@
 
 
                         <table width="100%" class="info_table table-borderless" t-if="picking.sale_id.incoterm">
-                            <th width="20%">Incoterms :</th>
+                            <th width="20%">incoterms :</th>
                             <td width="80%">
                                 <t t-if="picking.sale_id">
                                     <span t-field="picking.sale_id.incoterm"/>
@@ -201,8 +201,6 @@
                                 <span t-field="picking.location_id.location_id.name"/>
                             </td>
                         </table>
-
-
                         <p style="page-break-before:always;"></p>
                         <br/>
                         <br/>
@@ -352,7 +350,6 @@
                                 </t>
                             </td>
                         </table>
-
                         <br/>
                         <br/>
                         <br/>
@@ -361,9 +358,8 @@
                         <strong class="text-left">Delivery Information</strong>
                         <div style="border-top: 2px solid black;"/>
                         <br/>
-
                         <table width="100%" class="info_table table-borderless" t-if="picking.sale_id.incoterm">
-                            <th width="20%">Incoterms :</th>
+                            <th width="20%">incoterms :</th>
                             <td width="80%">
                                 <t t-if="picking.sale_id">
                                     <span t-field="picking.sale_id.incoterm"/>
@@ -382,6 +378,7 @@
                         <table width="100%" class="info_table table-borderless" t-if="picking.name">
                             <th width="20%">Loading Point :</th>
                             <td width="80%">
+                                <!--                                <span t-esc="o.get_warehouse(picking)"/>-->
                                 <span t-field="picking.location_id.name"/>
                                 <span t-if="picking.location_id.location_id.name">/</span>
                                 <span t-field="picking.location_id.location_id.name"/>
